<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<TableLayout
    android:id="@+id/tableLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn1"
            android:translationY="400dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationY="400dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationY="400dp" />

        <Button android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationY="400dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationX="-280dp"
            android:translationY="450dp" />

        <Button android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationX="-170dp"
            android:translationY="450dp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationX="-60dp"
            android:translationY="450dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationX="50dp"
            android:translationY="450dp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationX="-230dp"
            android:translationY="500dp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationX="-125dp"
            android:translationY="500dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn7" />
    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/btn2"
            android:translationX="305dp"
            android:translationY="500dp" />
        <Button android:id="@+id/btn_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn6"/>
        <Button android:id="@+id/btn_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginBottom="300dp"
            android:text="@string/minus"
            android:translationX="210dp"
            android:translationY="500dp" />
    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn8"/>
        <Button android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/btn9"/>
        <Button android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mult"/>
    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>
